[gd_scene load_steps=6 format=2]

[ext_resource path="res://Item/boton_player_ll/boton_1/boton_player_ll.gd" type="Script" id=1]
[ext_resource path="res://Item/boton_player_ll/Boton 2 precionado.png" type="Texture" id=2]
[ext_resource path="res://Item/boton_player_ll/Boton 2.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "no_pre",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "pre",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="boton_player_ll" type="Area2D"]
script = ExtResource( 1 )

[node name="animacion_boton" type="AnimatedSprite" parent="."]
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 2 )
animation = "no_pre"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_boton_player_ll_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_boton_player_ll_body_exited"]
